feat: enhance JavaFX client, update rules and docs
- Enhance MainController with improved UI logic
- Update MonopolyDealRulesSummary with expanded rules
- Add HandCardJson and RentScheduleText presentation helpers
- Update FXML layout and CSS styles
- Add new documentation files (ENGINEERING.md, requirements-en.md)
- Add I18n support and multiplayer guide
- Remove obsolete project-structure.md